# evm_event_watchdog

./: .gitignore  Cargo.toml  README.md  config.toml
docs/: index.html
src/: config.rs  main.rs  state.rs  tui.rs
src/alerts/: mod.rs
src/events/: mod.rs
src/listener/: mod.rs
src/rules/: mod.rs
