[package]
name = "evm_event_watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# EVM Interaction (Alloy)
alloy = { version = "0.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
eyre = "0.6"
thiserror = "1.0"

# Environment Variables
dotenv = "0.15"

# HTTP Client (for Webhooks)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
ratatui = "0.29.0"
crossterm = "0.28.1"
futures-util = "0.3.31"
url = "2.5.7"
config = "0.15.19"
rand = "0.9.2"
